# comparer

./: CMakeLists.txt  comparer.cpp  comparer.sln  comparer.vcxproj  comparer.vcxproj.filters  mercurysql.cpp  mercurysql.h  mingw-amd64.cmake  nullable.h  tds.cpp  tds.h
.github/workflows/: build-linux.yml  build-windows.yml
src/: comparer.cpp  comparer.h  event.cpp
